[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=3]
[ext_resource path="res://StoryNode.cs" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 576.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextInterfaceEngine" type="ReferenceRect" parent="VBoxContainer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_editor_icon": ExtResource( 3 )
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 580.0
margin_right = 532.0
margin_bottom = 600.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "Start"

[node name="StoryNode" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="buff_end" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_buff_end"]
[connection signal="enter_break" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_enter_break"]
[connection signal="input_enter" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_input_enter"]
[connection signal="resume_break" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_resume_break"]
[connection signal="state_change" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_state_change"]
[connection signal="tag_buff" from="VBoxContainer/MarginContainer/Panel/TextInterfaceEngine" to="." method="_on_tag_buff"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
